# sendgrid-async

./: Cargo.toml
src/: client.rs  error.rs  http_client.rs  lib.rs
src/api/: error.rs  mail_send.rs  mod.rs  paging.rs  requests.rs  transactional_template.rs  transactional_template_version.rs
src/sendgrid/: client.rs  message.rs  mod.rs  personalization.rs  requests.rs
src/test/: fixture.rs  mod.rs
