[package]
name = "sendgrid-async"
version = "0.1.0"
authors = ["Infinyon Contributors <team@infiyon.com>"]
edition = "2018"
description = "An async-std based client for sending emails with SendGrid"
documentation = "https://docs.rs/sendgrid-async"
repository = "https://github.com/infinyon/sendgrid-async"
license = "Apache-2.0"
categories = ["api-bindings","asynchronous","email"]

[dependencies]
anyhow = "1"
async-h1 = "2"
async-native-tls = "0.3"
async-std = "1"
data-encoding = "2"
http-types = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"